--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -13126,10 +13126,134 @@
 					<li><em>ⲟⲩⲱϩ</em> = <em>ⲟⲩⲟϩ</em> B. <i>habiter, être</i>.</li>
 					<li><em>ⲛϥ-ⲟⲩϫⲛⲉ-ϥ</em>, <em>ϥ-ⲁϫⲛⲉ-ϥ</em> <i>il la consumera (la maison)</i>, de <em>ⲱϫⲛ̄</em> Ṣ., <em>ⲁϫⲛ̄</em> A. <i>consumer, détruire</i>.</li>
 					<li><em>ⲛⲉϥ-ⲕⲉ-ϣⲉ</em>, <em>ⲛ̄ϥ-ⲕⲉ-ⳉⲉ</em> <i>et ses boiseries</i>.</li>
-					<li><em>ⲁⲥ-ⲛⲟϫ-ⲥ</em>, <em>ⲁⲥ-ⲧⲉⲕ-ⲥ</em> <i>il la jeta</i>, de <em>ⲛⲟⲩϫ</em>, <em>ⲛⲟⲩϫⲉ</em> <i>jeter</i>.</li>
+					<li><em>ⲁⲥ-ⲛⲟϫ-ⲥ</em>, <em>ⲁⲥ-ⲧⲉⲕ-ⲥ</em> <i>il la jeta</i>, de <em>ⲛⲟⲩϫ</em>, <em>ⲛⲟⲩϫⲉ</em> <i>jeter</i>. Le mot A. <em>ⲧⲉⲕ⸗</em> de <em>ϯⲕⲉ</em> cité plus bas semble être la racine Ṣ. <em>ⲧⲱⲕ</em> qui signifie à la fois <i>allumer</i> (B. <em>ⲑⲱⲕ</em>) et <i>fixer, enfoncer</i> (B. <em>ⲑⲱⲕⲥ</em>).</li>
+					<li><em>ⲛ̄ⲧⲟⲟⲩ</em>, <em>ⲛ̄ⲧⲁⲩ</em> = <em>ⲛ̀ⲑⲱⲟⲩ</em> <i>eux, elles</i>.</li>
+					<li><em>ⲛ̄-ⲑⲉ</em>, <em>ⲛ̄-ⲧⳉⲉ</em> <i>à la manière</i>. <em>ⲛ̄ⲑⲉ</em> = <em>ⲛ̄-ⲧ-ϩⲉ</em> avec contraction de <em>ⲧϩ</em> en <em>ⲑ</em>. <em>ⳉⲉ</em> = <em>ϧⲉ</em> B. <i>manière</i>, mais le B. emploie de préférence le mot <em>ⲣⲏϯ</em> qui a le même sens.</li>
+				</ol>
+				<h5>Isaïe I, 1–6.</h5>
+				<h6>Boḥairique.</h6>
+				<p>(<i>Tattam</i>).</p>
+				<ol>
+					<li><em>Ϯϩⲟⲣⲁⲥⲓⲥ ⲉⲧⲁϥⲛⲁⲩ ⲉⲣⲟⲥ ⲛ̀ϫⲉ ⲏⲥⲁⲏⲁⲥ ⲡϣⲏⲣⲓ ⲛ̀ⲁⲙⲱⲥ ⲑⲏ ⲉⲧⲁϥⲛⲁⲩ ⲉⲣⲟⲥ ϧⲁ ϯⲓⲟⲩⲇⲉⲁ ⲛⲉⲙ ϧⲁ ⲓ︤ⲗ︦ⲏ︦ⲙ︥ ϧⲉⲛ ⲑⲙⲉⲧⲟⲩⲣⲟ<sup class="footnote">3</sup> ⲛ̀ⲟⲥⲓⲁⲥ ⲛⲉⲙ ⲓⲱⲁⲑⲁⲙ ⲛⲉⲙ ⲁⲭⲁⲥ ⲛⲉⲙ ⲉⲍⲉⲕⲓⲁⲥ ⲛⲏ ⲉⲧⲁⲩⲉⲣⲟⲩⲣⲟ ϧⲉⲛ ϯⲓⲟⲩⲇⲉⲁ.</em></li>
+					<li><em>ⲥⲱⲧⲉⲙ ⲧⲫⲉ ⲟⲩⲟϩ ϭⲓⲥⲙⲏ ⲡⲕⲁϩⲓ ϫⲉ ⲡϭⲟⲓⲥ ⲡⲉⲧⲁϥⲥⲁϫⲓ: ϩⲁⲛϣⲏⲣⲓ ⲁⲓϫⲫⲱⲟⲩ ⲟⲩⲟϩ ⲁⲓϭⲁⲥⲟⲩ ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲁⲩⲉⲣⲁⲑⲉⲧⲓⲛ ⲙ̀ⲙⲟⲓ.</em></li>
+					<li><em>ⲁ ⲟⲩⲉϩⲉ ⲥⲟⲩⲉⲛ ⲫⲏ ⲉⲧⲁϥϣⲟⲡϥ ⲟⲩⲟϩ ⲟⲩⲉⲱ ⲁϥⲥⲟⲩⲉⲛ ⲫⲟⲩⲟⲛϩϥ ⲛ̀ⲧⲉ ⲡⲉϥϭⲟⲓⲥ ⲡⲓ︤ⲥ︦ⲗ︥ ⲇⲉ ⲙ̀ⲡⲉϥⲥⲟⲩⲱⲛⲧ ⲟⲩⲟϩ ⲡⲁⲗⲁⲟⲥ ⲙ̀ⲡⲉϥⲕⲁϯ ⲉⲣⲟⲓ.</em></li>
+					<li><em>ⲟⲩⲟⲓ ⲙ̀ⲓϣⲗⲟⲗ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ ⲡⲓⲗⲁⲟⲥ ⲉⲑⲙⲉϩ ⲛ̀ⲁⲙⲁⲣⲧⲓⲁ ⲡϫⲣⲟϫ ⲙ̀ⲡⲟⲛⲏⲣⲟⲛ ⲛⲓϣⲏⲣⲓ ⲛ̀ⲁⲛⲟⲙⲟⲥ ⲁⲣⲉⲧⲉⲛⲭⲁ ⲡϭⲥ ⲛ̀ⲥⲁ ⲑⲏⲛⲟⲩ ⲡⲉⲑⲟⲩⲁⲃ ⲛ̀ⲧⲉ ⲡⲓ︤ⲥ︦ⲗ︥ ⲁⲣⲉⲧⲉⲛϯ ϫⲱⲛⲧ ⲛⲁϥ.</em></li>
+					<li><em>ⲟⲩⲟⲛ ⲛ̀ⲉⲣϧⲟⲧ ⲉⲧⲉⲧⲉⲛⲛⲁϭⲓⲧϥ ⲉⲣⲉⲧⲉⲛⲧⲟⲩϩⲉ ⲁⲛⲟⲙⲓⲁ ⲉϫⲉⲛ ⲁⲛⲟⲙⲓⲁ ⲁⲫⲉ ⲛⲓⲃⲉⲛ ⲉ ⲡⲉⲙⲕⲁϩ ⲟⲩⲟϩ ϩⲏⲧ ⲛⲓⲃⲉⲛ ⲉ ⲡⲉⲙⲕⲁϩ ⲛ̀ϩⲏⲧ.</em></li>
+				</ol>
+				<h6>Ṣaꜥîdique.</h6>
+				<p>(<i>Ciasca</i> II, 219).</p>
+				<ol>
+					<li><em>Ⲑⲟⲣⲁⲥⲓ̈ⲥ<sup class="footnote">1</sup> ⲛ̄ⲧⲁ ⲏⲥⲁⲓⲁⲥ ⲛⲁⲩ ⲉⲣⲟⲥ ⲡϣⲏⲣⲉ ⲛ̄ϩⲁⲙⲱⲥ ⲛ̄ⲧⲁϥⲛⲁⲩ ⲉⲣⲟⲥ<sup class="footnote">2</sup> ⲉⲧⲃⲉ ϯⲟⲩⲇⲁⲓⲁ ⲙⲛ ⲑⲓ︤ⲗ︦ⲏ︦ⲙ︥ ϩⲛ ⲧⲙⲛⲧⲉⲣⲟ<sup class="footnote">3</sup> ⲛ̄ⲟⲥⲓⲁⲥ ⲙⲛ ⲓⲱⲁⲑⲁⲙ ⲙⲛ ⲁⲭⲁϩ ⲙⲛ ⲉⲍⲉⲕⲓⲁⲥ ⲛⲁⲓ̈ ⲛ̄ⲧⲁⲩⲣ̄ⲣ̄ⲣⲟ ⲉϫⲛ̄ ϯⲟⲩⲇⲁⲓⲁ.</em></li>
+					<li><em>ⲥⲱⲧⲙ ⲧⲡⲉ ϫⲓ̈ⲥⲙⲏ ⲡⲕⲁϩ ϫⲉ ⲁ ⲡϫⲟⲉⲓⲥ ϣⲁϫⲉ: ϩⲛ̄ϣⲏⲣⲉ ⲁⲓ̈ϫⲡⲟⲟⲩ ⲁⲓ̈ϫⲁⲥⲧⲟⲩ ⲛ̄ⲧⲟⲟⲩ ⲇⲉ ⲁⲩⲁ̄ⲑⲉⲧⲉⲓ ⲙ̄ⲙⲟⲓ.</em></li>
+					<li><em>ⲁ ⲟⲩⲉ̄ϩⲉ ⲥⲟⲩⲛ̄ ⲡⲉϥϫⲟⲉⲓⲥ ⲁⲩⲱ ⲁⲩⲉⲱ ⲥⲟⲩⲛ̄ ⲡⲟⲩⲱⲙϥ ⲙ̄ⲡⲉϥϫⲟⲉⲓⲥ ⲡⲓ︤ⲏ︦ⲗ︥ ⲇⲉ ⲙ̄ⲡⲉϥⲥⲟⲩⲱⲛⲧ ⲁⲩⲱ ⲡⲁⲗⲁⲟⲥ ⲙ̄ⲡⲉϥϭⲛ ⲁⲛⲅ ⲛⲓⲙ.</em></li>
+					<li><em>ⲟⲩⲟⲓ ⲛ̄ⲟⲩϩⲉⲑⲛⲟⲥ ⲛ̄ⲣⲉϥⲣ̄ⲛⲟⲃⲉ ⲟⲩⲗⲁⲟⲥ ⲉϥⲙⲉϩ ⲉⲃⲟⲗ ⲉ ⲛⲟⲃⲉ ⲡⲉⲥⲡⲉⲣⲙⲁ ⲙ̄ⲡⲟⲛⲏⲣⲟⲥ ⲛ̄ϣⲏⲣⲉ ⲛ̄ⲛⲁⲛⲟⲙⲟⲥ ⲁ̄ⲧⲉⲧⲛⲕⲁ ⲡϫⲟⲉⲓⲥ ⲛ̄ⲥⲱⲧⲛ ⲁⲩⲱ ϫⲉ ⲧⲉⲧⲛϯ ⲛ̄ⲟⲩϭⲱⲛⲧ ⲙ̄ⲡⲉⲧⲟⲩⲁⲁⲃ ⲙ̄ⲡⲓ︤ⲏ︦ⲗ︥.</em></li>
+					<li><em>ⲁⲩⲱ ⲡⲉ ⲡⲕⲉⲥⲁϣ ⲉϯⲛⲁⲛ̄ⲧϥ ⲉ̄ϫⲱⲧⲛ ⲉⲧⲉⲧⲛ̄ⲟⲩⲱϩ ⲉϫⲛ ⲛⲉⲧⲛⲁⲟⲙⲓⲁ ⲁⲡⲉ ⲛⲓⲙ ⲉⲩⲧⲕⲁⲥ ϩⲏⲧ ⲛⲓⲙ ⲉⲩⲗⲩⲡⲏ.</em></li>
+				</ol>
+				<h6>Fayoumique.</h6>
+				<p>(<i>Zoega</i> 145).</p>
+				<ol>
+					<li><em>Ⲑⲟⲣⲁⲥⲓ̈ⲥ<sup class="footnote">1</sup> ⲛ̄ⲧⲁ ⲏⲥⲁⲓⲁⲥ ⲛⲉⲩ ⲉⲗⲁⲥ<sup class="footnote">2</sup> ⲡϣⲏⲗⲓ ⲛ̄ϩⲁⲙⲱⲥ ⲧⲏ ⲛ̄ⲧⲁϥⲛⲉⲩ ⲉⲗⲁⲥ ⲉⲧⲃⲉ ϯⲟⲩⲇⲉⲁ ⲙⲛ ⲧϩ︤ⲓ︦ⲉ︦ⲙ︥ ϩⲛ ⲧⲙⲉⲧⲣ̄ⲣⲁ<sup class="footnote">3</sup> ⲛ̄ⲟⲍⲓ̈ⲁⲥ ⲙⲛ ⲓⲱⲁⲑⲁⲙ ⲙⲛ ⲁⲭⲁⲍ ⲙⲛ ⲉⲍⲉⲕⲓⲁⲥ ⲛⲉⲓ ⲛ̄ⲧⲁⲩⲉⲗⲉⲣⲣⲁ ⲉϫⲛ ϯⲟⲩⲇⲉⲁ.</em></li>
+					<li><em>ⲥⲱⲧⲉⲙ ⲧⲡⲏ. ϫⲓⲥⲙⲏ ⲡⲕⲉϩⲓ ϫⲉ ⲁ ⲡϭⲥ ϣⲉϫⲓ: ϩⲉⲛϣⲏⲗⲓ ⲁⲓϫⲡⲁⲩ ⲁⲓϫⲉⲥⲧⲟⲩ. ⲛ̄ⲧⲁⲩ ⲇⲉ ⲁⲩⲁⲑⲉϯ ⲙ̄ⲙⲁⲓ.</em></li>
+					<li><em>ⲁ ⲟⲩⲁϩⲏ ⲥⲟⲩⲱⲛ ⲡⲉⲥϭⲥ. ⲁⲩⲱ ⲁⲩⲓⲱ ⲥⲟⲩⲱⲛ ⲡⲟⲩⲁⲙϥ ⲙ̄ⲡⲉϥϭⲥ. ⲡⲓ︤ⲥ︦ⲣ︦ⲗ︥ ⲇⲉ ⲙ̄ⲡⲉϥⲥⲟⲩⲱⲛⲧ ⲁⲩⲱ ⲡⲁⲗⲁⲟⲥ ⲙ̄ⲡⲉϥϭⲉⲛ ⲁⲛⲁⲕ ⲛⲓⲙ.</em></li>
+					<li><em>ⲟⲩⲁ ⲉⲛⲟⲩⲉⲑⲛⲟⲥ ⲛ̄ⲗⲉϥⲉⲗⲛⲁⲃⲓ. ⲟⲩⲗⲁⲟⲥ ⲉϥⲙⲉϩ ⲉⲃⲁⲗ ⲛ̄ⲛⲁⲃⲓ ⲡⲥⲡⲉⲣⲙⲁ ⲙ̄ⲡⲟⲛⲏⲣⲟⲛ. ⲛⲉϣⲏⲣⲓ ⲛ̄ⲛⲉⲁⲛⲟⲙⲟⲥ ⲁⲧⲉⲧⲉⲛⲕⲉ ⲡϭⲥ ⲛ̄ⲥⲱⲧⲉⲛ. ⲁⲩⲱ ⲁⲧⲉⲧⲛϯⲛ̄ⲟⲩϭⲱⲛⲧ ⲙ̄ⲡⲡⲉⲧⲟⲩⲉⲉⲃ ⲙ̄ⲡⲓ︤ⲥ︦ⲣ︦ⲗ︥.</em></li>
+					<li><em>ⲉϣϭⲏ ⲡⲉ ⲡⲕⲉϣⲉϣ ⲉⲧⲉⲧⲉⲛⲟⲩⲱϩ ⲉϫⲛ ⲛⲉⲧⲉⲛⲁⲛⲟⲙⲓⲁ ⲁⲡⲏ ⲛⲓⲃⲓ ⲉⲩϯⲡⲕⲉⲥ ϩⲏⲧ ⲛⲓⲃⲓ ⲉⲩⲗⲩⲡⲏ.</em></li>
+				</ol>
+				<p>Notes.</p>
+				<ol>
+					<li><em>ⲑⲟⲣⲁⲥⲓⲥ</em> = <em>ⲧ-ϩⲟⲣⲁⲥⲓⲥ.</em>.</li>
+					<li><em>ⲉⲣⲟ-ⲥ</em>, <em>ⲉⲗⲁ-ⲥ</em>, <i>(vers) elle</i>. Comme on le voit, le Fayoumique se distingue de tous les autres dialectes par l'emploi de <em>ⲗ</em> à la place de <em>ⲣ</em>. De même que l'A. et le M. il prend <em>ⲁ</em> là où le B. et le Ṣ. ont généralement <em>ⲟ</em>.</li>
+					<li><em>ⲑ-ⲙⲉⲧ-ⲟⲩⲣⲟ</em>, <em>ⲧ-ⲙⲛⲧ-ⲉⲣⲟ</em>, <em>ⲧ-ⲙⲉⲧ-ⲣ̄ⲣⲁ</em>, <i>le règne</i>. Le groupe B. <em>ⲙⲉⲧ</em>, <em>-ⲙⲧ</em> est représenté en Ṣ. par <em>ⲙⲛⲧ</em>. <em>ⲟⲩⲣⲟ</em> Ⲃ. <i>roi</i> se dit en Ṣ. <em>ⲉⲣⲟ</em> ou <em>ⲣ̄ⲣⲟ</em> toujours prononcé <i>éro</i>, en F. <em>ⲣ̄ⲣⲁ</em>, <em>ⲉⲣⲣⲁ</em>.</li>
+				</ol>
+				<h5>Isaïe XXXIII, 1–11.</h5>
+				<h6>Boḥairique.</h6>
+				<p>(<i>Tattam</i>).</p>
+				<ol>
+					<li><em>Ⲟⲩⲟⲓ ⲛ̀ⲛⲏ ⲉⲧⲓⲣⲓ ⲙ̀ⲙⲱⲟⲩ ⲛ̀ⲧⲁⲗⲉⲡⲱⲣⲟⲥ ⲛ̀ⲑⲱⲧⲉⲛ ⲇⲉ ⲙ̀ⲙⲟⲛ ϩⲗⲓ ⲛⲁⲉⲣ ⲑⲏⲛⲟⲩ ⲛ̀ⲧⲁⲗⲉⲡⲱⲣⲟⲥ ⲟⲩⲟϩ ⲫⲏ ⲉⲧⲛⲁⲉⲣⲁⲑⲉⲧⲓⲛ ⲙ̀ⲙⲱⲧⲉⲛ ⲁϥⲉⲣⲁⲑⲉⲧⲓⲛ ⲁⲛ ⲉⲩⲉ̀ⲧⲁϩⲉ ⲛⲏ ⲉⲧⲉⲣⲁⲑⲉⲧⲓⲛ ⲟⲩⲟϩ ⲉⲩⲉ̀ⲧⲏⲓⲧⲟⲩ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩϩⲟⲗⲓ ϩⲓ ⲟⲩϩ̀ⲃⲟⲥ ⲡⲁⲓⲣⲏϯ ⲉⲩⲉϭⲣⲟ ⲉ̀ⲣⲱⲟⲩ.</em></li>
+					<li><em>ⲡϭⲟⲓⲥ ⲛⲁⲓ ⲛⲁⲛ ⲉⲣⲉ ϩ̀ⲑⲏⲛ ⲅⲁⲣ ⲭⲏ ⲉ̀ⲣⲟⲕ ⲡ̀ϫⲣⲟϫ ⲛ̀ⲧⲉ ⲛⲏ ⲉⲧⲟⲓ ⲛ̀ⲁⲧⲥⲱⲧⲉⲙ ⲙⲁⲣⲉϥϣⲱⲡⲓ ⲉ ⲡⲧⲁⲕⲟ ⲡⲉⲛⲟⲩϫⲁⲓ ⲇⲉ ⲁϥϧⲉⲛ ⲟⲩⲥⲏⲟⲩ ⲛ̀ϩⲟϫϩⲉϫ.</em></li>
+					<li><em>ⲉⲑⲃⲉ ⲧⲥⲙⲏ ⲛ̀ⲧⲉ ⲧⲉⲕϩⲟϯ ⲁⲩⲧⲱⲙⲧ ⲛ̀ϫⲉ ϩⲁⲛⲗⲁⲟⲥ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲧⲉⲕϩⲟϯ ⲁⲩϫⲱⲣ ⲉⲃⲟⲗ ⲛ̀ϫⲉ ϩⲁⲛⲉⲑⲛⲟⲥ.</em></li>
+					<li><em>ϯⲛⲟⲩ ⲇⲉ ⲉⲩⲉ̀ⲑⲱⲟⲩϯ ⲛ̀ⲛⲉⲧⲉⲛϣⲱⲗ ⲛ̀ⲧⲉ ⲟⲩⲕⲟⲩϫⲓ ⲛⲉⲙ ⲟⲩⲛⲓϣϯ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲁⲓ ⲉϥⲑⲱⲟⲩϯ ⲛ̀ϩⲁⲛϣ̀ϫⲏⲟⲩ ⲡⲁⲓⲣⲏϯ ⲉⲩⲉⲥⲱⲃⲓ ⲙ̀ⲙⲱⲧⲉⲛ.</em></li>
+					<li><em>ϥ̀ⲟⲩⲁⲃ ⲛ̀ϫⲉ ⲫϯ ⲫⲏ ⲉⲧϣⲟⲡ ϧⲉⲛ ⲛⲏ ⲉⲧϭⲟⲥⲓ ⲁⲥⲙⲟϩ ⲛ̀ϫⲉ ⲥⲓⲱⲛ ⲛ̀ϩⲁⲡ ⲛⲉⲙ ⲙⲉⲑⲙⲏⲓ.</em></li>
+					<li><em>ⲉⲩⲉ̀ⲧⲏⲓⲧⲟⲩ ϧⲉⲛ ⲟⲩⲛⲟⲙⲟⲥ ⲡⲉⲛⲟⲩϫⲁⲓ ⲇⲉ ⲁϥⲭⲏ ϧⲉⲛ ϩⲁⲛⲁϩⲱⲣ ⲁⲥⲙ̀ⲙⲁⲩ ⲛ̀ϫⲉ ϯⲉⲡⲓⲥⲧⲏⲙⲏ ⲛⲉⲙ ϯⲥⲟⲫⲓⲁ ⲛⲉⲙ ϯⲙⲉⲧⲉⲩⲥⲉⲃⲏⲥ ϩⲁ ⲡϭⲥ ⲛⲁⲓ ⲛⲉ ⲛⲓⲁϩⲱⲣ ⲛ̀ⲧⲉ ϯⲇⲓⲕⲉⲟⲥⲩⲛⲏ.</em></li>
+					<li><em>ϩⲏⲡⲡⲉ ϧⲉⲛ ⲧⲉⲧⲉⲛϩⲟϯ ⲛ̀ⲑⲱⲟⲩ ⲉⲩⲉⲉ̀ⲣϩⲟϯ ⲛⲏ ⲉⲧⲉⲧⲉⲛ ⲛⲁⲉⲣϩⲟϯ ϧⲁϫⲱⲟⲩ ⲉⲩⲉ̀ⲉⲣϩⲟϯ ϧⲁⲧⲉⲧⲉⲛϩⲏ ϩⲁⲛϥⲉⲙⲛ̀ϩⲱⲃ ⲅⲁⲣ ⲉⲩⲉⲟⲩⲟⲣⲡⲟⲩ ⲉⲩⲣⲓⲙⲓ. ϧⲉⲛ ⲟⲩϣⲁϣⲓ ⲉⲩϯϩⲟ ⲛ̀ⲥⲁ ⲟⲩϩⲓⲣⲏⲛⲏ.</em></li>
+					<li><em>ⲉⲩⲉϣⲱϥ ⲅⲁⲣ ⲛ̀ϫⲉ ⲛⲓⲙⲱⲓⲧ ⲛ̀ⲧⲉ ⲛⲁⲓ ⲁⲥⲕⲏⲛ ⲛ̀ϫⲉ ⲧϩⲟϯ ⲛ̀ⲛⲓⲉⲑⲛⲟⲥ ⲟⲩⲟϩ ϯⲇⲓⲁⲑⲏⲕⲏ ⲥⲧⲥⲙⲟⲛⲧ ⲛⲉⲙⲱⲟⲩ ⲉⲩⲉⲟⲗⲥ ⲟⲩⲟϩ ⲛ̀ⲛⲉⲧⲉⲛⲟⲡⲟⲩ ⲉ ϩⲁⲛⲣⲱⲙⲓ.</em></li>
+					<li><em>ⲁϥⲉⲣϩⲏⲃⲓ ⲛ̀ϫⲉ ⲡⲕⲁϩⲓ ⲟⲩⲟϩ ⲁϥϣⲓⲡⲓ ⲛ̀ϫⲉ ⲡⲓⲗⲓⲃⲁⲛⲟⲥ ⲁϥⲉⲣϩⲟⲗⲟⲥ ⲛ̀ϫⲉ ⲡⲓⲥⲱⲣⲱⲛ ⲉⲥⲉϣⲱⲡⲓ ⲉⲥⲟⲩⲱⲛϩ ⲉⲃⲟⲗ ⲛ̀ϫⲉ ϯⲓⲟⲩⲇⲉⲁ ⲛⲉⲙ ⲡⲓⲕⲉⲣⲙⲏⲗⲟⲥ.</em></li>
+					<li><em>ϯⲛⲟⲩ ϯⲛⲁⲧⲱⲛⲧ ⲡⲉϫⲉ ⲡϭⲥ. ϯⲛⲟⲩ ϯⲛⲁϭⲓⲱⲟⲩ. ϯⲛⲟⲩ ϯⲛⲁϭⲓⲥⲓ.</em></li>
+				</ol>
+				<h6>Memphitique.</h6>
+				<p>(<i>Bouriant</i>, Fragments baschmouriques, 9).</p>
+				<ol>
+					<li><em>Ⲟⲩⲁⲓ̈ ⲛⲛⲉⲧⲧⲁⲗⲉⲡⲱⲣⲓ<sup class="footnote">1</sup> ⲙ̄ⲙⲁⲧⲉⲛ ⲙ̄ⲙⲛ̄ ⲗⲁⲁⲩ ⲇⲉ ⲛⲉⲉⲣⲧⲏⲩⲧⲉⲛ ⲛ̄ⲧⲁⲗⲉⲡⲱⲣⲟⲥ ⲁⲩⲱ ⲡⲉⲧⲁⲑⲉⲧⲓ ⲛ̄ⲛⲁϥⲁⲑⲉϯ ⲙ̄ⲙⲁⲧⲉⲛ ⲁⲛ. ⲥⲉⲛⲉⲧⲁⲕⲁ<sup class="footnote">2</sup> ⲛ̄ⲛⲉⲧⲁⲑⲉϯ ⲁⲩⲱ ⲥⲉⲛⲉⲡⲁⲣⲁⲇⲓⲇⲟⲩ ⲙ̄ⲙⲁⲩ ⲁⲩⲱ ⲛ̄ⲧϩⲏ ⲛ̄ⲛⲟⲩϩⲁⲁⲗⲓ ϩⲓ ⲟⲩϣⲧⲏⲛ ⲧⲉⲓ ⲧⲉ ⲧϩⲏ<sup class="footnote">3</sup> ⲉⲧⲟⲩⲛⲉϭⲱⲧⲡ<sup class="footnote">4</sup>.</em></li>
+					<li><em>ⲡϭⲥ ⲛⲉⲉⲓ ⲛⲏⲛ ⲛ̄ⲧⲁⲛⲛⲉϩϯ ⲅⲁⲣ ⲉⲣⲁⲕ ⲙⲁⲣⲉ ⲡⲉⲥⲡⲉⲣⲙⲁ ⲛ̄ⲛⲉⲧⲁⲓ ⲛ̄ⲁⲧⲛⲉϩϯ ϣⲱⲡⲓ ⲉⲩⲧⲁⲕⲁ<sup class="footnote">2</sup> ⲉⲣⲉ ⲡⲉⲛⲟⲩϫⲉⲓ ⲇⲉ ϩⲙ ⲡⲉⲟⲩⲁⲓϣ<sup class="footnote">5</sup> ⲛ̄ⲧⲉⲑⲗⲓⲯⲓⲥ.</em></li>
+					<li><em>ⲉⲧⲃⲉ ⲧⲉⲥⲙⲏ ⲛ̄ⲧⲉⲕϩⲁϯ ⲁ ⲛⲉⲗⲁⲟⲥ ⲡⲱϣⲥ<sup class="footnote">6</sup> ⲉⲃⲁⲗ ⲉⲧⲃⲉ ⲧⲉⲕϩⲁϯ ⲁⲩⲱ ⲁ ⲛⲉⲉⲑⲛⲟⲥ ϫⲱⲱⲣⲉ ⲉⲃⲁⲗ.</em></li>
+					<li><em>ϯⲛⲟⲩ ⲇⲉ ⲛⲉⲧⲉⲛϣⲱⲗ ⲛⲉⲥⲉⲟⲩⲁϩ<sup class="footnote">7</sup> ⲉϩⲟⲩⲛ ⲛⲁ ⲡⲕⲟⲩⲓ ⲙⲛ ⲛⲁ ⲡⲛⲁϭ ⲛ̄ⲧϩⲏ<sup class="footnote">3</sup> ⲛ̄ⲟⲩⲉⲉⲓ ⲉϥⲥⲱⲟⲩⲁϩ<sup class="footnote">7</sup> ⲉϩⲟⲩⲛ ⲛ̄ϩⲉⲛϣϫⲏⲟⲩ ⲧⲉⲓ ⲧⲉ ⲧϩⲏ<sup class="footnote">3</sup> ⲉⲧⲟⲩⲛⲉϩⲱⲃⲥ ⲙ̄ⲙⲁⲧⲉⲛ.</em></li>
+					<li><em>ⲫϯ ⲟⲩⲉⲉⲃ ⲉⲧⲟⲩⲏϩ<sup class="footnote">9</sup> ϩⲛ ⲛⲉⲧϫⲁⲥⲓ ⲁ ⲥⲓⲱⲛ ⲙⲟⲩϩ ⲛ̄ϩⲉⲡ ϩⲓ ⲇⲓⲕⲉⲟⲥⲓⲛⲏ.</em></li>
+					<li><em>ⲥⲉⲛⲉⲧⲉⲓⲧⲟⲩ ϩⲙ ⲡⲛⲟⲙⲟⲥ ⲉⲣⲉ ⲡⲉⲛⲟⲩϫⲉⲓ ϩⲛ ⲛⲉⲁϩⲱⲱⲣ ⲉⲣⲉ ⲧⲥⲟⲫⲓⲁ ⲙⲛ ⲧⲙⲉⲧⲣⲉⲙⲛ̄ϩⲏⲧ<sup class="footnote">10</sup> ⲙⲛ ⲧⲙⲉⲧⲣⲉⲙⲛⲟⲩⲧⲉ<sup class="footnote">11</sup> ⲛⲏⲟⲩ ⲛⲁϩⲣⲉⲛ ⲡϭⲥ ⲛⲉⲓ ⲛⲉ ⲛⲉⲁϩⲱⲱⲣ ⲛ̄ⲧⲇⲓⲕⲉⲟⲥⲩⲛⲏ.</em></li>
+					<li><em>ϩⲉⲓⲧⲉⲥ ⲛ̄ⲧⲁⲩ ⲥⲉⲛⲉⲉⲣϩⲁϯ ϩⲛ ⲧⲉⲧⲉⲛϩⲁϯ ⲛⲉⲧⲉⲧⲉⲛⲣ̄ϩⲁϯ ϩⲁⲧⲉⲩϩⲏ ⲥⲉⲛⲉⲱϣ ⲉⲃⲁⲗ ⲉⲩⲧⲱⲃⲁϩ<sup class="footnote">12</sup> ⲛ̄ⲛⲟⲩϩⲓⲣⲏⲛⲏ<sup class="footnote">13</sup> ⲉⲃⲁⲗ ϩⲓⲧⲉⲛ ⲧⲉⲩⲧⲏⲛ ⲥⲉⲛⲉⲧⲉⲛⲛⲁⲩ ⲅⲁⲣ ⲛϩⲉⲛⲃⲁⲓϣⲓⲛⲓ ⲉⲩⲣⲓⲙⲓ ϩⲛⲛⲟⲩϣⲓϣⲓ ⲉⲩⲧⲱⲃⲁϩ ⲛ̄ⲛⲟⲩϩⲓⲣⲏⲛⲏ.</em></li>
+					<li><em>ⲛⲉϩⲓⲁⲩⲓ<sup class="footnote">14</sup> ⲅⲁⲣ ⲛ̄ⲛⲉⲓ ⲛⲉⲉⲣϫⲁⲓⲏ<sup class="footnote">15</sup> ⲁ ⲧϩⲁϯ ⲛ̄ⲛⲉⲉⲑⲛⲟⲥ ⲟⲩⲱ ⲁⲩⲱ ⲥⲉⲛⲉϥⲓ ⲛ̄ⲧⲇⲓⲁⲑⲏⲕⲏ ⲉⲧⲕⲏ ⲙⲛ ⲛⲉⲓ. ⲁⲩⲱ ⲛ̄ⲛⲉⲧⲉⲛⲁⲡⲟⲩ ⲉ ⲣⲱⲙⲓ.</em></li>
+					<li><em>ⲁ ⲡⲕⲉϩⲓ ⲉⲣϩⲏⲓⲃⲓ ⲁ ⲡⲗⲓⲃⲁⲛⲟⲥ ϫⲓϣⲓⲡⲉ ⲁ ⲁⲥⲧⲁⲣⲱⲛ ⲉⲣϩⲉⲗⲗⲟⲥ ⲧⲅⲁⲗⲓⲗⲉⲁ ⲙⲛ ⲡⲕⲁⲣⲙⲏⲗⲟⲥ ⲛⲉⲟⲩⲱⲛϩ ⲉⲃⲁⲗ.</em></li>
+					<li><em>ϯⲛⲟⲩ ϯⲛⲁⲧⲱⲟⲩⲛ ⲡⲉϫⲉ ⲡϭⲥ. ϯⲛⲟⲩ ϯⲛⲉϫⲓⲉⲁⲩ. ϯⲛⲟⲩ ϯⲛⲉϫⲓⲥⲓ.</em></li>
+				</ol>
+				<p>Notes.</p>
+				<ol>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
+					<li><em></em></li>
 					<li><em></em></li>
 					<li><em></em></li>
 				</ol>
+				<h5>Lettres.</h5>
+				<h6>Lettre de Paphnuce<sup class="footnote">1</sup>.</h6>
+				<p><em></em></p>
+				<p><i>Verso.</i></p>
+				<p><em></em></p>
+				<p class="footnote">1. Manuscrits coptes du Musée des Antiquités des Pays-Bas à Leyde, par <i>Pleyte et Boeser</i>. Leyde, 1897. (p. 482).</p>
+				<p class="footnote">2. <i>A donner à Philothée et à Apa Jôre, de la part de Paphnuce</i>, etc.</p>
+				<h6>Lettre d'Azarias<sup class="footnote">1</sup>.</h6>
+				<p><em></em></p>
+				<h6>Lettre de Sévère.</h6>
+				<p>(AZ. xxxiii. p. 41).</p>
+				<p><em></em></p>
+				<p class="footnote">1. Di alcuni Cocci Copti del Museo egizio di Torino. Note de <i>Francesco Rossi</i>. 1895, et A Z. 1878. p. 12.</p>
+				<p class="footnote">2. Le subjonctif remplace l'impératif (252), <i>porte-les et viens au Sud</i>.</p>
+				<h5>Inscriptions.</h5>
+				<h6>Éclipse de soleil<sup class="footnote">1</sup>.</h6>
+				<p><em></em></p>
+				<h6>Épitaphe<sup class="footnote">3</sup>.</h6>
+				<p><em></em></p>
+				<p class="footnote">1. Même référence que «Lettre d'Azarias».</p>
+				<p class="footnote">2. <em>ⲙ</em> indique ici la filiation: Pierre fils de Palou.</p>
+				<p class="footnote">3. Revue Egyptologique, I, 1880, p. 139, et IV, 1885, p. 2. Cf. Hall, Coptic and greek texts… pl. 3, N° 400.</p>
+				<p class="footnote">4. <i>O Navigation (dans laquelle il est) difficile d'arriver</i> (<em>ⲉⲛ-ⲉⲓ</em> = <em>ⲛ̀-ⲓ̀</em>) <i>au rivage!</i></p>
+				<p class="footnote">5. <em>ⲛⲉⲛⲧ-ⲁⲩ-ⲙⲟⲩ</em> ceux qui sont morts.</p>
+				<h6>Stèles du Musée d'Alexandrie.</h6>
+				<p>(Salle N° 6).</p>
+				<p>N° 280.</p>
+				<p><em></em></p>
+				<p class="footnote">1. <i>Sic</i> pour <em>ⲡⲙⲁ</em>.</p>
+				<p class="footnote">2. Traduction: <i>Le Père, le Fils, le Saint-Esprit. Apa Jérémie, Apa Énoch, notre frère Klousané, leur enfant, est mort le 28 d'Epip, dans la paix, amen.</p>
+				<p>N° 295.</p>
+				<p><em></em></p>
+				<p>N° 197.</p>
+				<p><em></em></p>
+				<p class="footnote">1. <em>ⲟⲩⲃⲟⲏⲑⲱⲛ</em>, <em>ⲟⲩ</em> est pour <em>ⲟ</em>, <i>le protecteur</i>.</p>
+				<p class="footnote">2. <em>ⲡⲓⲁⲕⲟⲩ</em> nom propre qui se retrouve dans d'autres inscriptions.</p>
+				<p class="footnote">3. <em>ⲥⲟⲩ-ⲏ</em> <i>le</i> 8. Le trait distinctif des chiffres n'est pas toujours tracé dans les inscriptions.</p>
+				<p class="footnote">4. <em>ⲧⲁⲕⲁⲡⲏ</em> = <em>ⲧ-ⲁⲅⲁⲡⲏ</em>, <i>la charité</i>.</p>
+				<p>Cette épitaphe est en dialecte memphitique, caractérisé par la présence de <em>ⲁ</em> là ou le ṣaꜥîdique aurait <em>ⲟ</em>.</p>
+				<p>A la 3<sup>e</sup> ligne <em>ⲁϥⲙⲛⲧⲁⲛ</em> = Ṣ. <em>ⲁϥⲙⲧⲟⲛ</em>; devant <em>ⲧ</em>, <em>ⲙ</em> affectionne un <em>ⲛ</em> intermédiaire.</p>
+				<p>A la 6<sup>e</sup> ligne <em>ⲫ</em> indique évidemment le nom de Dieu, <em>ⲫϯ</em> = <em>ⲫ-ⲛⲟⲩϯ</em>.</p>
+				<p>Dans le mot <em>ⲡϭⲥ</em> (<em>ⲡ-ϭⲟⲓⲥ</em>) l'article est tellement uni au nom qu'il est censé ne faire qu'un avec lui; c'est pour cette raison qu'on ajoute un second article.</p>
+				<p>Voici la traduction: <i>En paix, Apa Abraham s'est reposé le 6 de kiahk. Que Dieu lui fasse miséricorde; la paix, amen; salut dans le Seigneur.</p>
 			</div>
 		</div>
 		<div id="vocabulaire_saidique">
@@ -14910,7 +15034,21 @@
 				</div>
 				<p>Other texts</p>
 				<div>
-					
+					<p class="footnote">1. Manuscrits coptes du Musée des Antiquités des Pays-Bas à Leyde, par <i>Pleyte et Boeser</i>. Leyde, 1897. (p. 482).</p>
+					<p class="footnote">2. <i>A donner à Philothée et à Apa Jôre, de la part de Paphnuce</i>, etc.</p>
+					<p class="footnote">1. Di alcuni Cocci Copti del Museo egizio di Torino. Note de <i>Francesco Rossi</i>. 1895, et A Z. 1878. p. 12.</p>
+					<p class="footnote">2. Le subjonctif remplace l'impératif (252), <i>porte-les et viens au Sud</i>.</p>
+					<p class="footnote">1. Même référence que «Lettre d'Azarias».</p>
+					<p class="footnote">2. <em>ⲙ</em> indique ici la filiation: Pierre fils de Palou.</p>
+					<p class="footnote">3. Revue Egyptologique, I, 1880, p. 139, et IV, 1885, p. 2. Cf. Hall, Coptic and greek texts… pl. 3, N° 400.</p>
+					<p class="footnote">4. <i>O Navigation (dans laquelle il est) difficile d'arriver</i> (<em>ⲉⲛ-ⲉⲓ</em> = <em>ⲛ̀-ⲓ̀</em>) <i>au rivage!</i></p>
+					<p class="footnote">5. <em>ⲛⲉⲛⲧ-ⲁⲩ-ⲙⲟⲩ</em> ceux qui sont morts.</p>
+					<p class="footnote">1. <i>Sic</i> pour <em>ⲡⲙⲁ</em>.</p>
+					<p class="footnote">2. Traduction: <i>Le Père, le Fils, le Saint-Esprit. Apa Jérémie, Apa Énoch, notre frère Klousané, leur enfant, est mort le 28 d'Epip, dans la paix, amen.</p>
+					<p class="footnote">1. <em>ⲟⲩⲃⲟⲏⲑⲱⲛ</em>, <em>ⲟⲩ</em> est pour <em>ⲟ</em>, <i>le protecteur</i>.</p>
+					<p class="footnote">2. <em>ⲡⲓⲁⲕⲟⲩ</em> nom propre qui se retrouve dans d'autres inscriptions.</p>
+					<p class="footnote">3. <em>ⲥⲟⲩ-ⲏ</em> <i>le</i> 8. Le trait distinctif des chiffres n'est pas toujours tracé dans les inscriptions.</p>
+					<p class="footnote">4. <em>ⲧⲁⲕⲁⲡⲏ</em> = <em>ⲧ-ⲁⲅⲁⲡⲏ</em>, <i>la charité</i>.</p>
 				</div>
 			</div>
 	</body>
