--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -13240,7 +13240,7 @@
 				<p>N° 280.</p>
 				<p><em></em></p>
 				<p class="footnote">1. <i>Sic</i> pour <em>ⲡⲙⲁ</em>.</p>
-				<p class="footnote">2. Traduction: <i>Le Père, le Fils, le Saint-Esprit. Apa Jérémie, Apa Énoch, notre frère Klousané, leur enfant, est mort le 28 d'Epip, dans la paix, amen.</p>
+				<p class="footnote">2. Traduction: <i>Le Père, le Fils, le Saint-Esprit. Apa Jérémie, Apa Énoch, notre frère Klousané, leur enfant, est mort le 28 d'Epip, dans la paix, amen.</i></p>
 				<p>N° 295.</p>
 				<p><em></em></p>
 				<p>N° 197.</p>
@@ -13253,7 +13253,7 @@
 				<p>A la 3<sup>e</sup> ligne <em>ⲁϥⲙⲛⲧⲁⲛ</em> = Ṣ. <em>ⲁϥⲙⲧⲟⲛ</em>; devant <em>ⲧ</em>, <em>ⲙ</em> affectionne un <em>ⲛ</em> intermédiaire.</p>
 				<p>A la 6<sup>e</sup> ligne <em>ⲫ</em> indique évidemment le nom de Dieu, <em>ⲫϯ</em> = <em>ⲫ-ⲛⲟⲩϯ</em>.</p>
 				<p>Dans le mot <em>ⲡϭⲥ</em> (<em>ⲡ-ϭⲟⲓⲥ</em>) l'article est tellement uni au nom qu'il est censé ne faire qu'un avec lui; c'est pour cette raison qu'on ajoute un second article.</p>
-				<p>Voici la traduction: <i>En paix, Apa Abraham s'est reposé le 6 de kiahk. Que Dieu lui fasse miséricorde; la paix, amen; salut dans le Seigneur.</p>
+				<p>Voici la traduction: <i>En paix, Apa Abraham s'est reposé le 6 de kiahk. Que Dieu lui fasse miséricorde; la paix, amen; salut dans le Seigneur.</i></p>
 			</div>
 		</div>
 		<div id="vocabulaire_saidique">
@@ -15044,12 +15044,13 @@
 					<p class="footnote">4. <i>O Navigation (dans laquelle il est) difficile d'arriver</i> (<em>ⲉⲛ-ⲉⲓ</em> = <em>ⲛ̀-ⲓ̀</em>) <i>au rivage!</i></p>
 					<p class="footnote">5. <em>ⲛⲉⲛⲧ-ⲁⲩ-ⲙⲟⲩ</em> ceux qui sont morts.</p>
 					<p class="footnote">1. <i>Sic</i> pour <em>ⲡⲙⲁ</em>.</p>
-					<p class="footnote">2. Traduction: <i>Le Père, le Fils, le Saint-Esprit. Apa Jérémie, Apa Énoch, notre frère Klousané, leur enfant, est mort le 28 d'Epip, dans la paix, amen.</p>
+					<p class="footnote">2. Traduction: <i>Le Père, le Fils, le Saint-Esprit. Apa Jérémie, Apa Énoch, notre frère Klousané, leur enfant, est mort le 28 d'Epip, dans la paix, amen.</i></p>
 					<p class="footnote">1. <em>ⲟⲩⲃⲟⲏⲑⲱⲛ</em>, <em>ⲟⲩ</em> est pour <em>ⲟ</em>, <i>le protecteur</i>.</p>
 					<p class="footnote">2. <em>ⲡⲓⲁⲕⲟⲩ</em> nom propre qui se retrouve dans d'autres inscriptions.</p>
 					<p class="footnote">3. <em>ⲥⲟⲩ-ⲏ</em> <i>le</i> 8. Le trait distinctif des chiffres n'est pas toujours tracé dans les inscriptions.</p>
 					<p class="footnote">4. <em>ⲧⲁⲕⲁⲡⲏ</em> = <em>ⲧ-ⲁⲅⲁⲡⲏ</em>, <i>la charité</i>.</p>
 				</div>
 			</div>
+		</div>
 	</body>
 </html>
