--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -14653,7 +14653,7 @@
 				</ul>
 			</div>
 			<hr>
-			<div id="petit_exercise">
+			<div id="petit_exercice">
 				<h3>Petit Exercice</h3>
 				<ul class="footnotes">
 					<li>1. Les Apocryphes coptes. Les évangiles des douze Apôtres et de S. Barthélemy (Patrologia orientalis, tome II, fasc. 2), par E. Révillout. Paris 1904; p. 135). — Tous les accents ont été volontairement omis dans l'édition de ce texte; nous l'avons reproduit tel quel.</li>
