--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -12108,10 +12108,71 @@
 			<h2>Bibliographie</h2>
 			<h3>De La Littérature Copte.</h3>
 			<h4>I. Notions Générales.</h4>
-			<p><i>Autefage S. J.</i>, Les Coptes. Extrait de «La Controverse et le Contemporain». Lyon, 1885, 8, 43 pp. Remarques générales sur la langue copte p. 15–19.</p>
-			<p><i>U. Benigni</i>, Bibliotheca coptica (Bessarione, V, 1900, p. 43–54, 449–475).</p>
-			<p>* <i>W. E. Crum</i>, Coptic Church. (Herzog-Hauck, XII, 801). — Aperçu général sur l'Eglise copte, sa littérature, etc.</p>
-			<p><i>Ad. Hebbelynck</i>, La langue copte et sa littérature. (Magasin littéraire, 1891).</p>
+			<ul>
+				<li><i>Autefage S. J.</i>, Les Coptes. Extrait de «La Controverse et le Contemporain». Lyon, 1885, 8, 43 pp. Remarques générales sur la langue copte p. 15–19.</li>
+				<li><i>U. Benigni</i>, Bibliotheca coptica (Bessarione, V, 1900, p. 43–54, 449–475).</li>
+				<li>* <i>W. E. Crum</i>, Coptic Church. (Herzog-Hauck, XII, 801). — Aperçu général sur l'Eglise copte, sa littérature, etc.</li>
+				<li><i>Ad. Hebbelynck</i>, La langue copte et sa littérature. (Magasin littéraire, 1891).</li>
+				<li><i>H. Hyvernat</i>, Album de paléographie copte pour servir à l'introduction paléographique des Actes des martyrs de l'Égypte. Paris, Rome, 1888. (1 pl. en chromophototypie; 56 pl. en phototypie).</li>
+				<li><i>A. Jacoby</i>, Studien zur koptischen Litteratur. (RT. XXIV, 1902, p. 36–44; 194–197; — XXV, 1903, p. 37–49).</li>
+				<li><i>M. Kabis</i>, Introduction à l'étude de la langue copte. (MIE. I, 1862, p. 13–38).</li>
+				<li>** <i>O. von Lemm</i>, Kleine koptische Studien. (Bulletin de l'Ac. imp. des Sciences de S<sup>t</sup>-Pétersbourg: I–IX dans le tome X, N° 5, 1899; X–XX dans le tome XIII, N° 1, 1900; XX–XXV dans le tome XIV, N° 3, 1901; XXVI–XLV dans le tome XXI, N°<sup>s</sup> 3 et 5, 1904). — Quatre tirages à part. Analyse par K. Piehl dans «Sphinx»: I–IX dans III, 235; X–XX dans IV, 212–222; XXI–XXV dans V, 151–154. — Autre analyse par S. de Ricci (R A. 1903, II, p. 311–315). Compte rendu de XXVI–XLV par Andersson dans «Sphinx», IX, 158–169. — Articles intéressants surtout pour la grammaire et la lexicographie.</li>
+				<li><i>Félix Nève</i>, Des travaux de l'érudition chrétienne sur les monuments de la langue copte. Louvain, 1853, 8, 16 pp.</li>
+				<li>* <i>Etienne Quatremère</i>, Recherches critiques sur la langue et la littérature de l'Égypte. Paris, 1808, 8, XII + 307 pp. (Contient aussi: Lamentations de Jérémie et Baruch).</li>
+				<li><i>J. E. Quibell</i>, Wann starb das Koptische aus ? (AZ. 39, 1901, p. 87). — A Qous et à Negada on parlait copte à la fin du 19<sup>e</sup> siècle.</li>
+				<li>* <i>Paul Renaudin</i>, La littérature chrétienne de l'Egypte. (L'Université Catholique, 15 Janvier 1899).</li>
+				<li><i>M Schwartze</i>, Das alte Aegypten oder Sprache, Geschichte, Religion und Verfassung des alten Aegyptens u. s. w. Erster Theil. Leipzig, 1843.</li>
+				<li>* <i>Ludwig Stern</i>, Kopten, koptische Sprache und Litteratur. (Encyclopaedie der Wissenschaften und Künste, von Ersch und Gruber, 2 sect. XXXIX, p. 12–36, 1886).</li>
+				<li><i>de Vlieger</i>, The origin and early history of the coptic Church. Lausanne, 1900, 8, 86 pp.</li>
+			</ul>
+			<h4>II. Grammaire.</h4>
+			<h5>1. Notes de philologie.</h5>
+			<ul>
+				<li><i>Amélineau</i>, Lettre à M. Maspero sur la prononciation et la vocalisation du copte et de l'ancien égyptien. (RT. XII, p. 23–48; 108–136).</li>
+				<li><i>Baillet</i>, La particule copte <em>ϫⲓⲛ</em>, <em>ϭⲓⲛ</em>. (RE, II, 1882, p. 349–355). — Origine égyptienne de cette particule. Critique de Revillout, p. 356.</li>
+				<li><i>U. Benigni</i>, La lingua copta. (Bessarione, V, 1901, p. 256–287). — Abrégé de la grammaire.</li>
+				<li><i>U. Benigni</i>, Paradigmi copti. Introduzione alla grammatica copta. (Bessarione, III, 1898, p. 89–121). — Paradigmes coptes en boḥairique et en ṣaꜥîdique.</li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<h5></h5>
 		</div>
 		<div id="chrestomathie">
 			<h2>Chrestomathie.</h2>
@@ -13220,27 +13281,64 @@
 				<p class="footnote">2. <i>A donner à Philothée et à Apa Jôre, de la part de Paphnuce</i>, etc.</p>
 				<h6>Lettre d'Azarias<sup class="footnote">1</sup>.</h6>
 				<p><em>ⲓ︤ⲥ︥ ⲡⲉⲭ︤ⲥ︥. ✙. ⲁⲛⲟⲕ ⲁⲍⲁⲣⲓⲁⲥ ⲡⲉⲣⲉϥⲣ̄ⲛⲟⲃⲉ ⲉϥⲥϩⲁⲓ ⲉϥϣⲓⲛⲉ ⲉ ⲡⲉϥⲙⲉⲣⲓⲧ ⲛ̄ⲉⲓⲱⲧ ⲙ̄ ⲙⲁⲓⲛⲟⲩⲧⲉ ⲉⲧⲫⲟⲣⲉⲓ ⲙ̄ ⲡⲉⲭ︤ⲥ︥ ϩⲛ ⲟⲩⲙⲉ ϥⲣⲁⲛⲅⲉ. ϯϣⲓⲛⲉ ⲟⲛ ⲉ ⲡⲁⲥⲟⲛ ⲫⲉⲃⲁⲙⲱⲛ ⲙⲛ ⲛⲉⲥⲛⲏⲩ ⲧⲏⲣⲟⲩ ⲉⲧϩⲁϩⲧⲏⲕ ⲟⲩϫⲁⲓ ϩⲙ ⲡϫⲟⲉⲓⲥ ⲡⲁⲙⲉⲣⲓⲧ ⲛ̄ ⲥⲟⲛ. ⲧⲁⲁⲥ ⲙ̄ⲡⲁⲓⲱⲧ ϥⲣⲁⲛⲅⲉ ϩⲓⲧⲛ ⲁⲍⲁⲣⲓⲁⲥ ⲡⲉϥϣⲏⲣⲉ.</em></p>
-				<h6>Lettre de Sévère.</h6>
-				<p>(AZ. xxxiii. p. 41).</p>
-				<p>
-					<em>✙. ϣⲟⲣⲡ ⲙⲉⲛ ϯϣⲓⲛⲉ ⲉⲣⲟⲕ ⲁⲣⲓ-ⲡ︤ⲛ︦ⲁ︥</em>
-					<em>ⲧⲛⲛⲟⲟⲩ ⲡⲕⲟⲩⲓ̈ ⲛ̄ⲑⲁⲣⲙⲟⲩⲥ ⲛⲁⲛ</em>
-					<em>ⲙⲛ ⲡⲥⲕⲉⲟⲥ ⲛ̄ⲏⲣⲡ ⲉⲡϣⲁ̄ ⲛⲁⲡⲁ ϣⲉ⸗</em>
-					<em>ⲛⲉⲧⲱⲙ ϫⲉ ⲉⲓⲥ ϩⲏⲏⲧⲉ ⲁϥϩⲱⲛ</em>
-					<em>ⲉϩⲟⲩⲛ ⲡⲗⲏⲛ ⲁⲛⲓⲥⲟⲩ ⲛⲅⲉⲓ<sup class="footnote">2</sup> ⲉⲣⲏⲥ</em>
-					<em>ⲛ̄ⲧⲛⲧⲁⲙⲟⲕ ⲉⲡⲉⲓϣⲁϫⲉ ⲛ̄ⲁⲛⲁⲅ-</em>
-					<em>ⲕⲁⲓⲱⲥ ⲗⲟⲓⲡⲟⲛ ⲙ̄ⲡⲣⲁⲙⲉⲗⲉⲓ.</em>
-					<em>ⲟⲩϫⲁⲓ̈ ϩⲙ-ⲡϫⲟⲉⲓⲥ. ⲏ̄ ⲁⲅⲓⲁ ⲧⲣⲓⲁⲥ:</em>
-					<em>ⲥⲟⲩⲏⲣⲟⲥ ϣⲉⲛⲉⲧⲱⲙ</em>
-					<em>ⲡⲉⲓⲉⲗⲁⲭⲓⲥⲧⲟⲥ.</em>
-				</p>
+				<div>
+					<h6>Lettre de Sévère.</h6>
+					<p>(AZ. xxxiii. p. 41).</p>
+					<p><em>✙. ϣⲟⲣⲡ ⲙⲉⲛ ϯϣⲓⲛⲉ ⲉⲣⲟⲕ ⲁⲣⲓ-ⲡ︤ⲛ︦ⲁ︥</em></p>
+					<p><em>ⲧⲛⲛⲟⲟⲩ ⲡⲕⲟⲩⲓ̈ ⲛ̄ⲑⲁⲣⲙⲟⲩⲥ ⲛⲁⲛ</em></p>
+					<p><em>ⲙⲛ ⲡⲥⲕⲉⲟⲥ ⲛ̄ⲏⲣⲡ ⲉⲡϣⲁ̄ ⲛⲁⲡⲁ ϣⲉ⸗</em></p>
+					<p><em>ⲛⲉⲧⲱⲙ ϫⲉ ⲉⲓⲥ ϩⲏⲏⲧⲉ ⲁϥϩⲱⲛ</em></p>
+					<p><em>ⲉϩⲟⲩⲛ ⲡⲗⲏⲛ ⲁⲛⲓⲥⲟⲩ ⲛⲅⲉⲓ<sup class="footnote">2</sup> ⲉⲣⲏⲥ</em></p>
+					<p><em>ⲛ̄ⲧⲛⲧⲁⲙⲟⲕ ⲉⲡⲉⲓϣⲁϫⲉ ⲛ̄ⲁⲛⲁⲅ-</em></p>
+					<p><em>ⲕⲁⲓⲱⲥ ⲗⲟⲓⲡⲟⲛ ⲙ̄ⲡⲣⲁⲙⲉⲗⲉⲓ.</em></p>
+					<p><em>ⲟⲩϫⲁⲓ̈ ϩⲙ-ⲡϫⲟⲉⲓⲥ. ⲏ̄ ⲁⲅⲓⲁ ⲧⲣⲓⲁⲥ:</em></p>
+					<p><em>ⲥⲟⲩⲏⲣⲟⲥ ϣⲉⲛⲉⲧⲱⲙ</em></p>
+					<p><em>ⲡⲉⲓⲉⲗⲁⲭⲓⲥⲧⲟⲥ.</em></p>
+				</div>
 				<p class="footnote">1. Di alcuni Cocci Copti del Museo egizio di Torino. Note de <i>Francesco Rossi</i>. 1895, et A Z. 1878. p. 12.</p>
 				<p class="footnote">2. Le subjonctif remplace l'impératif (252), <i>porte-les et viens au Sud</i>.</p>
 				<h5>Inscriptions.</h5>
-				<h6>Éclipse de soleil<sup class="footnote">1</sup>.</h6>
-				<p><em></em></p>
+				<div>
+					<h6>Éclipse de soleil<sup class="footnote">1</sup>.</h6>
+					<div>
+						<p><em>✙ ϩⲛ ⲥⲟⲩ ⲙⲛⲧⲁϥⲧⲉ ⲙ̄</em></p>
+						<p><em>ⲫⲁⲙⲉⲛⲱⲑ ⲧⲏⲥ</em></p>
+						<p><em>ⲧⲉⲧⲁⲣⲧⲏⲥ ⲓⲛⲇⲓⲕ</em></p>
+						<p><em>ⲁ ⲡⲣⲏ ⲣ̄ⲕⲁⲕⲉ ⲛ̄ ϫⲡ̄</em></p>
+						<p><em>ϥⲧⲟ ⲙ̄ ⲡⲉϩⲟⲟⲩ ✙</em></p>
+					</div>
+					<div>
+						<p><em>ⲁⲩⲱ ϩⲛ ⲧⲉⲣⲟⲙⲡⲉ</em></p>
+						<p><em>ⲉⲧⲉⲣⲉ ⲡⲉⲧⲣⲟⲥ ⲙ̄</em></p>
+						<p><em>ⲡⲁⲗⲟⲩ<sup class="footnote">2</sup> ⲟ ⲛ̄ⲗⲁϣⲁⲛⲉ</em></p>
+						<p><em>ⲉ ϫⲏⲙⲉ ⲛ̄ϩⲏⲧⲥ.</em></p>
+						<p><em>✙</em></p>
+					</div>
+				</div>
 				<h6>Épitaphe<sup class="footnote">3</sup>.</h6>
-				<p><em></em></p>
+				<div>
+					<p><em>✙ ⲱ ϫⲉ ⲟⲩ-ⲁϣ ⲙ̀ⲙⲓⲛⲉ ⲡⲉ ⲡⲉⲓⲡⲱ</em></p>
+					<p><em>ⲣϫ. ⲱ ϭⲓⲛⲃⲱⲕ ⲉⲡϣⲙⲙⲟ ⲉϥⲟⲩ</em></p>
+					<p><em>ⲏⲟⲩ ⲡⲁⲣⲁ ⲛ̀ⲥⲟⲛ ⲧⲏⲣⲟⲩ. ⲱ ϭⲓⲛ</em></p>
+					<p><em>ⲡⲗⲉⲁ ⲉⲥⲛⲁϣⲧ ⲉⲛⲉⲓ ⲉⲛⲉⲕⲣⲟ<sup class="footnote">4</sup></em></p>
+					<p><em>ⲱ ⲡⲙⲟⲩ ⲡⲣⲁⲛ ⲉⲧⲥⲁϣⲉ ϩⲛ ⲧⲧⲁ</em></p>
+					<p><em>ⲡⲣⲟ ⲛ̀ⲟⲩⲟⲛ ⲛⲓⲙ ⲡⲉⲧϣⲱⲱⲧ</em></p>
+					<p><em>ⲉⲃⲟⲗ. ⲡⲉⲧⲡⲱⲣϫ ⲉϩⲉⲛⲉⲓⲟⲧⲉ</em></p>
+					<p><em>ⲉⲛⲉⲩϣⲏⲣⲉ ⲁⲩⲱ ϩⲉⲛ ϣⲏⲣⲉ ⲉ</em></p>
+					<p><em>ⲛⲉⲩⲉⲓⲟⲧⲉ. ⲟⲩⲟⲛ ⲛⲓⲙ ⲉⲧⲟ ⲙ</em></p>
+					<p><em>ⲙⲁⲓ̈ⲣⲓⲙⲉ ⲉϫⲉⲛ ⲛⲉⲛⲧⲁⲩⲙⲟⲩ<sup class="footnote">5</sup> ⲛ̀</em></p>
+					<p><em>ⲧⲟⲟⲧⲟⲩ. ⲙⲁⲣⲟⲩⲉⲓ ⲉ ⲡⲉⲓⲙⲁ ⲛ̀</em></p>
+					<p><em>ⲥⲉϫⲱ ⲛ̀ⲟⲩⲧⲟⲉⲓⲧ ⲉϥⲟⲩⲟⲟⲧⲉ ⲉ</em></p>
+					<p><em>ϫⲛ ⲧⲙⲛⲧⲉⲃⲓⲏⲛ ⲛ̄ⲧⲁⲙⲛⲧϣⲏⲣⲉ</em></p>
+					<p><em>ϣⲏⲙ. ⲁⲛⲟⲕ ⲓ̈ⲱϩⲁⲛⲛⲏⲥ ⲡⲇⲓⲁⲕⲓ</em></p>
+					<p><em>ⲛ̄ⲧⲁⲓⲉⲓ ⲉⲃⲟⲗϩⲓⲧⲟⲟⲧⲥ ⲛ̄ⲧⲁⲙⲁⲁⲩ</em></p>
+					<p><em>ⲛ̄ⲭⲏⲣⲁ ⲁⲓⲃⲱⲕ ⲉ ⲕⲱⲥ ⲧⲡⲟⲗⲓⲥ</em></p>
+					<p><em>ⲁⲓⲙⲟⲩ ϩⲙ ⲡⲛⲁ<sup class="footnote">1</sup> ⲉⲧⲙⲙⲁⲩ ⲁⲩⲛ̄ⲧ ⲁⲩ</em></p>
+					<p><em>ⲕⲁⲁⲧ ϩⲙ ⲡⲉⲓⲧⲁⲫⲟⲥ. ⲁⲣⲓ ⲡⲁⲙⲉⲉⲩⲉ</em></p>
+					<p><em>ⲛⲁⲙⲉⲣⲁⲧⲉ ⲧⲉ ⲡⲛⲟⲩⲧⲉ ⲕⲱ ⲛⲁⲓ̈ ⲉⲃⲟⲗ.</em></p>
+					<p><em>ⲛ̄ⲧⲁ</em> (<em>ⲓⲙ̄ⲧⲟⲛ</em>) <em>ⲙ̄ⲙⲟⲓ ⲙ̄ⲡⲟⲟⲩ ⲙⲏⲛⲟⲥ</em></p>
+					<p><em>ⲫⲁⲫⲓ ⲓⲅ ⲓⲛⲇ/ ⲓⲅ.</em></p>
+				</div>
 				<p class="footnote">1. Même référence que «Lettre d'Azarias».</p>
 				<p class="footnote">2. <em>ⲙ</em> indique ici la filiation: Pierre fils de Palou.</p>
 				<p class="footnote">3. Revue Egyptologique, I, 1880, p. 139, et IV, 1885, p. 2. Cf. Hall, Coptic and greek texts… pl. 3, N° 400.</p>
@@ -13249,13 +13347,48 @@
 				<h6>Stèles du Musée d'Alexandrie.</h6>
 				<p>(Salle N° 6).</p>
 				<p>N° 280.</p>
-				<p><em></em></p>
+				<div>
+					<p><em>ⲡⲓⲱⲧ ⲡϣⲏⲣⲉ</em></p>
+					<p><em>ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩ</em></p>
+					<p><em>ⲁⲁⲃ. ⲁⲡⲁ ⲓⲉⲣⲏⲙⲓⲁⲥ</em></p>
+					<p><em>ⲁⲡⲁ ⲉⲛⲱⲭ</em></p>
+					<p><em>ⲡⲉⲛⲥⲟⲛ ⲕⲗⲟⲩⲥⲁⲛⲉ</em></p>
+					<p><em>ⲡⲉⲩϣⲏⲣⲉ ⲁϥⲕⲁⲥⲱⲙⲁ</em></p>
+					<p><em>ⲉϩⲣⲁⲓ ⲛⲥⲟⲩϫⲟⲩⲧ ⲏ</em></p>
+					<p><em>ⲛⲉⲡⲏⲡ ϩⲛ ⲟⲩⲉⲓⲣⲏ</em></p>
+					<p><em>ⲛⲛⲉ ϩⲁⲙⲏⲛ<sup class="footnote">2</sup>.</em></p>
+				</div>
 				<p class="footnote">1. <i>Sic</i> pour <em>ⲡⲙⲁ</em>.</p>
 				<p class="footnote">2. Traduction: <i>Le Père, le Fils, le Saint-Esprit. Apa Jérémie, Apa Énoch, notre frère Klousané, leur enfant, est mort le 28 d'Epip, dans la paix, amen.</i></p>
 				<p>N° 295.</p>
-				<p><em></em></p>
+				<div>
+					<p><em>✙ ⲓⲥ ✙ ⲭⲥ ✙</em></p>
+					<p><em>ⲉⲓⲥ ⲑⲉⲟⲥ</em></p>
+					<p><em>ⲟⲩ ⲃⲟⲏⲑⲱ</em></p>
+					<p><em>ⲛ<sup class="footnote">1</sup> ⲁⲡⲁⲁⲓⲱ</em></p>
+					<p><em>ⲛ ⲡⲓⲁⲕⲟⲩ<sup class="footnote">2</sup></em></p>
+					<p><em>ⲁϥⲉⲙⲧⲟⲛ</em></p>
+					<p><em>ⲙⲟϥ ⲥⲟⲩⲏ<sup class="footnote">3</sup></em></p>
+					<p><em>ⲑⲟⲟⲩⲧ ⲁⲣⲓ</em></p>
+					<p><em>ⲧⲁⲕⲁⲡⲏ<sup class="footnote">4</sup> ϣ</em></p>
+					<p><em>ⲗⲏⲗ ⲉϫⲱϥ</em></p>
+					<p><em>ϩⲁⲙⲏⲛ.</em></p>
+				</div>
 				<p>N° 197.</p>
-				<p><em></em></p>
+				<div>
+					<p><em>✙ ✙</em></p>
+					<p><em>✙ ⲉⲛ ⲏⲣⲏⲛⲏ</em></p>
+					<p><em>ⲁⲡⲁⲃⲣϩⲁⲙ</em></p>
+					<p><em>ⲁϥⲙⲛⲧⲁⲛ</em></p>
+					<p><em>ⲙⲁϥ⸗ ⲛⲥⲟⲩ</em></p>
+					<p><em>ⲥⲁⲩ⸗ ⲛⲕⲏ</em></p>
+					<p><em>ϩⲕ⸗ ⲉⲣⲉ ⲫ̅</em></p>
+					<p><em>ⲉⲣⲟⲩⲛⲉⲓ ⲛⲏ</em></p>
+					<p><em>ⲉϥ⸗ ϩⲟⲩ-ⲏⲣ</em></p>
+					<p><em>ⲏⲛⲏ⸗ ϩⲁⲙ</em></p>
+					<p><em>ⲏⲛ ⲟⲩϫⲉⲓ</em></p>
+					<p><em>ϩⲙ ⲡ ⲡϭⲥ</em></p>
+				</div>
 				<p class="footnote">1. <em>ⲟⲩⲃⲟⲏⲑⲱⲛ</em>, <em>ⲟⲩ</em> est pour <em>ⲟ</em>, <i>le protecteur</i>.</p>
 				<p class="footnote">2. <em>ⲡⲓⲁⲕⲟⲩ</em> nom propre qui se retrouve dans d'autres inscriptions.</p>
 				<p class="footnote">3. <em>ⲥⲟⲩ-ⲏ</em> <i>le</i> 8. Le trait distinctif des chiffres n'est pas toujours tracé dans les inscriptions.</p>
