--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -12172,7 +12172,90 @@
 				<li></li>
 				<li></li>
 			</ul>
-			<h5></h5>
+			<h5>2. Grammaires antérieures à 1880.</h5>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<h5>3. Grammaires postérieures à 1880.</h5>
+			<ul>
+				<li></li>
+				<li></li>
+			</ul>
+			<h4>III. Dictionnaire.</h4>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<h4>IV. Catalogues.</h4>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<h4>V. Textes Bibliques.</h4>
+			<h5>1. Ṣaꜥîdiques.</h5>
+			<h6>Ancien Testament.</h6>
 		</div>
 		<div id="chrestomathie">
 			<h2>Chrestomathie.</h2>
