--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -13306,7 +13306,7 @@
 					<p class="footnote">2. Le subjonctif remplace l'impératif (252), <i>porte-les et viens au Sud</i>.</p>
 				</div>
 				<div>
-					<h5>Inscriptions.</h5>
+					<h5 id="#chrestomathie_inscriptions">Inscriptions.</h5>
 					<div>
 						<h6>Éclipse de soleil<sup class="footnote">1</sup>.</h6>
 						<div>
