--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -14663,7 +14663,7 @@
 				<h3>Chrestomathy</h3>
 				<h4>Bohairic</h4>
 				<div>
-					<div id="histoire_de_joseph">
+					<div id="footnotes_joseph">
 						<h5>XXXIX</h5>
 						<div>
 							<ul class="footnotes">
@@ -15049,14 +15049,14 @@
 							</ul>
 						</div>
 					</div>
-					<div id="council_dephese">
+					<div id="footnotes_saint_cyrille">
 						<ul class="footnotes">
 							<li>1. Cod. <em>ⲛ̀ⲧⲉ ⲃⲉⲛⲛⲏⲥⲓ</em>.</li>
 							<li>275.</li>
 							<li>Cod. <em>ⲡⲉⲗⲁⲟⲥ</em>.</li>
 						</ul>
 					</div>
-					<div id="la_saint_famille">
+					<div id="footnotes_saint_famille">
 						<ul class="footnotes">
 							<li>1. Copié jadis par Mgr. Agabios Bschai sur un manuscrit du Vatican; c'est une doxologie sur l'air <i>Adam</i>.</li>
 							<li>1. 245.</li>
@@ -15069,7 +15069,7 @@
 							<li>1. 45.</li>
 						</ul>
 					</div>
-					<div id="extraits_de_keft">
+					<div id="footnotes_eveque_de_keft">
 						<ul class="footnotes">
 							<li>1. <i>Mémoires de l'Institut Égyptien</i>, II. p. 333.</li>
 							<li>2. 45.</li>
@@ -15079,7 +15079,7 @@
 							<li>1. Pour <em>ⲉⲛⲛⲁⲉⲣϧⲁⲉ</em>.</li>
 						</ul>
 					</div>
-					<div id="etraits_des_dioscore">
+					<div id="footnotes_dioscore">
 						<ul class="footnotes">
 							<li>1. Mémoires présentés par divers Savants à l'Académie des Inscriptions et Belles-Lettres. 1<sup>re</sup> série, VIII, 1<sup>re</sup> partie, p. 419. — A propos d'une inscription copte, par <i>Eug. Révillout</i>.</li>
 							<li>1. Pour <em>ⲧⲉⲛⲉⲣϩⲁⲗ</em>.</li>
@@ -15089,7 +15089,7 @@
 							<li>1. Cod. <em>ϯⲟⲩ</em>.</li>
 						</ul>
 					</div>
-					<div id="le_voleur_converti">
+					<div id="footnotes_voleur_converti">
 						<ul class="footnotes">
 							<li>1. Récits de l'abbé Daniel (VI<sup>e</sup> siècle) dans la <i>Revue de l'Orient chrétien</i>, V. p. 545.</li>
 							<li>1. 342.</li>
@@ -15097,28 +15097,28 @@
 							<li>1. Le texte a <em>ϧⲓⲧⲉⲛ</em>.</li>
 						</ul>
 					</div>
-					<div id="panegyrique_alexandrie">
+					<div id="footnotes_saint_michel">
 						<ul class="footnotes">
 							<li>2. Les Actes des Martyrs de l'Égypte, par <i>Henri Hyvernat.</i> Paris, 1886. (p. 253–261).</li>
 							<li>1. <em class="gr">ὡς</em> «comme si».</li>
 							<li>1. Le sujet du vorbe <em>ϯ</em> est «le Roi».</li>
 						</ul>
 					</div>
-					<div id="paraphrase_du_pater">
+					<div id="footnotes_paraphrase_du_pater">
 						<ul class="footnotes">
 							<li>1. Catenæ in Evangelia ægyptiacæ quæ supersunt. Gottingæ, 1886. Edité par <i>Paul de Lagarde</i>. (p. 12–14).</li>
 							<li>1. Le mot <em>ⲡⲓⲣⲁⲥⲙⲟⲥ</em> (<em class="gr">πειρασμός</em>) ne prend pas toujours l'article <em>ⲡⲓ</em> parce qu'il commence déjà par <em>ⲡⲓ</em>.</li>
 							<li>1. «De plus grands que nous».</li>
 						</ul>
 					</div>
-					<div id="saint_michel">
+					<div id="footnotes_saint_michel">
 						<ul class="footnotes">
 							<li>1. Saint Michel the Archangel… edited by <i>Wallis Budge</i>. London 1894, p. 2.</li>
 							<li>1. Pour <em>ⲱⲡⲧ</em> «charger».</li>
 							<li>1. «Mais, dira (le contradicteur)».</li>
 						</ul>
 					</div>
-					<div id="martyre_saint_macaire_antioche">
+					<div id="footnotes_saint_macaire">
 						<ul class="footnotes">
 							<li>1. Les actes des Martyrs de l'Egypte, par <i>Henri Hyvernat</i>. Paris 1886.</li>
 							<li>1. Pour <em>ⲙ̀ⲙⲟⲥ</em>.</li>
