--- a/coptic/mallon/verbs/index.html
+++ b/coptic/mallon/verbs/index.html
@@ -791,7 +791,7 @@
 				<tr>
 					<td><em>ⲕⲱⲣϥ</em></td>
 					<td><em>ⲕⲉⲣϥ-</em></td>
-					<td><em>—</em></td>
+					<td><em>ⲕⲟⲣϥ⸗</em></td>
 					<td><em>ⲕⲟⲣϥ</em></td>
 					<td>abolir</td>
 				</tr>
