--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -614,8 +614,10 @@
 					<div></div>
 				</div>
 				<p>Les sept dernières lettres sont des caractères démotiques qui dérivent eux-mêmes des hiéroglyphes:</p>
-				<div class="abc">
-					<img src="https://randykomforty.github.io/coptic/mallon/images/mallon_demotic_evolution.png" alt="">
+				<div id="demotic_evolution">
+					<div>
+						<img src="./images/demotic_evolution.png" alt="">
+					</div>
 				</div>
 				<p id="section-004" class="section" data-section-no="4"></p>
 				<p>Les lettres <em>ⲅ</em> <em>ⲇ</em> <em>ⲍ</em> ne sont employées que dans les mots grecs<sup class="footnote">1</sup>. Lorsque <em>ⲝ</em> et <em>ⲯ</em> font partie d'un mot copte, ils sont une contraction de <em>ⲕⲥ</em>, <em>ⲡⲥ</em>: <em>ⲝⲟⲗⲥⲉⲗ</em> = <em>ⲕⲥⲟⲗⲥⲉⲗ</em>, <em>ⲯⲁⲓ</em> = <em>ⲡⲥⲁⲓ</em>.</p>
@@ -8110,7 +8112,9 @@
 			</div>
 			<div id="chiffres_cursifs">
 				<h3>Chiffres coptes cursifs.</h3>
-				<img src="./images/chiffres_coptes_cursifs.png" alt="">
+				<div>
+					<img src="./images/chiffres_coptes_cursifs.png" alt="">
+				</div>
 			</div>
 		</div>
 		<div id="grammaire_saidique">
