--- a/coptic/mallon/grammar/index.html
+++ b/coptic/mallon/grammar/index.html
@@ -620,7 +620,7 @@
 				<p>Les sept dernières lettres sont des caractères démotiques qui dérivent eux-mêmes des hiéroglyphes:</p>
 				<div id="demotic_evolution">
 					<div>
-						<img src="./images/demotic_evolution.png" alt="">
+						<img src="../images/demotic_evolution.png" alt="">
 					</div>
 				</div>
 				<p id="section-004" class="section" data-section-no="4"></p>
