--- a/coptic/mallon/grammar/index.html
+++ b/coptic/mallon/grammar/index.html
@@ -8117,7 +8117,7 @@
 			<div id="chiffres_cursifs">
 				<h3>Chiffres coptes cursifs.</h3>
 				<div>
-					<img src="./images/chiffres_coptes_cursifs.png" alt="">
+					<img src="../images/chiffres_coptes_cursifs.png" alt="">
 				</div>
 			</div>
 		</div>
