--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -795,6 +795,129 @@
     <p>3- <i>ϯ-Ⲉⲕⲕ̀ⲗⲏⲥⲓⲁ</i></p>
     <p>Answer: 3-</p>
 </div>
+<div id="chapter_04">
+	<h2>Chapter 4</h2>
+	<h3>Making a Nominal Sentence</h3>
+	<h3>Some prepositions used with nouns</h3>
+	<h4><em class="ar"></em></h4>
+	<p>Coptic prepositions are, as in other languages, a very important item for language structure. There are many of these in Coptic and they can be used with nouns, verbs, and otherwise. In this chapter, we will learn some of the most commonly used ones, especially those used with Coptic nouns. Here are some of the rules in their usage:</p>
+	<p><em class="ar"></em></p>
+<ol>
+	<li>
+		<p>Usually the Coptic prepositions are mentioned before the noun, and their pronunciation is not stressed. You simply place the stress of pronunciation on the following word.</p>
+		<p><em class="ar"></em></p>
+	</li>
+	<li>
+		<p>In some Coptic texts, you will notice sometimes that the prepositon is written as one unit with the following noun. This way of usage is called "proclitic". In this book, they will always be written separately to make the distinction easier for you.</p>
+		<p><em class="ar"></em></p>
+	</li>
+</ol>
+<h4>Study the following prepositions:</h4>
+<h4><em class="ar"></em></h4>
+<p><em>ϧⲉⲛ</em></p>
+<p><em>in</em></p>
+<p><em class="ar">فى</em></p>
+<ul>
+	<li>
+		<p><em>ϧⲉⲛ ⲡ̀-ⲏⲓ</em></p>
+		<p>in the house</p>
+		<p><em class="ar">فى البيت</em></p>
+	</li>
+	<li>
+		<p><em>ϧⲉⲛ ϯ-ⲉⲕⲕ̀ⲗⲏⲥⲓⲁ</em></p>
+		<p>in the church</p>
+		<p><em class="ar">فى الكنيسة</em></p>
+	</li>
+	<li>
+		<p><em>ϧⲉⲛ ⲡⲓ-ⲉⲣⲫⲉⲓ</em></p>
+		<p>in the sanctuary</p>
+		<p><em class="ar">فى الهيكل</em></p>
+	</li>
+	<li>
+		<p><em>ϧⲉⲛ ⲫ̀-ⲣⲁⲛ</em></p>
+		<p>in the name</p>
+		<p><em class="ar">فى إسم (ب إسم)</em></p>
+	</li>
+</ul>
+<p><em>ϩⲓ</em></p>
+<p><em>on</em></p>
+<p><em class="ar">على</em></p>
+<ul>
+	<li>
+		<p><em>ϩⲓ ⲫ̀=ⲙⲱⲓⲧ</em></p>
+		<p>on the road</p>
+		<p><em class="ar">على الطريق</em></p>
+	</li>
+	<li>
+		<p><em>ϩⲓ ⲡ̀ϫⲟⲓ</em></p>
+		<p>on the ship</p>
+		<p><em class="ar">على المركب (القارب)</em></p>
+	</li>
+</ul>
+<p>This is the most commonly used application for "<em>ϩⲓ</em>". There are other applications that will be cited later.</p>
+</div>
+<p><em>ⲉ</em></p>
+<p><em>to, for</em></p>
+<p><em class="ar">إلى، نحو</em></p>
+<ul>
+	<li>
+		<p><em>ⲉ ⲡ̀-ⲏⲓ</em></p>
+		<p>to the house</p>
+		<p><em class="ar">إلى المنزل، نحو المنزل</em></p>
+	</li>
+	<li>
+		<p><em>ⲉ ϯ-ⲉⲕⲕ̀ⲗⲏⲥⲓⲁ</em></p>
+		<p>to the church</p>
+		<p><em class="ar">إلى الكنيسة</em></p>
+	</li>
+</ul>
+<p><em>ⲛⲉⲙ</em></p>
+<p><em>with</em></p>
+<p><em class="ar">مع</em></p>
+<ul>
+	<li>
+		<p><em>ⲡⲓ-ⲣⲱⲙⲓ ⲛⲉⲙ ϯ-ⲥ̀ϩⲓⲙⲓ</em></p>
+		<p>the man and the woman</p>
+		<p><em class="ar">الرجل والمرأة</em></p>
+	</li>
+	<li>
+		<p><em>ⲡⲓ-ⲁⲅⲅⲉⲗⲟⲥ ⲛⲉⲙ ⲡⲓ-ⲁⲣⲭⲏ-ⲁⲅⲅⲉⲗⲟⲥ</em></p>
+		<p>the angel and the archangel</p>
+		<p><em class="ar">الملاك ورئيس الملائكة</em></p>
+	</li>
+</ul>
+<p>Other Coptic prepositions</p>
+<p><em class="ar">بعض حروف الجر الأخرى القبطية</em></p>
+<p><em>ϧⲁ</em></p>
+<p><em>under</em></p>
+<p><em class="ar">تحت</em></p>
+<ul>
+	<li>
+		<p><em>ϧⲁ ϯ-ⲉⲕⲕ̀ⲗⲏⲥⲓⲁ</em></p>
+		<p>under the church</p>
+		<p><em class="ar">تحت الكنيسة</em></p>
+	</li>
+	<li>
+		<p><em>ϧⲁ ⲡⲓ-ⲙⲁⲛ̀ⲉⲣϣⲱⲟⲩϣⲓ</em></p>
+		<p>under the altar</p>
+		<p><em class="ar">تحت المذبح</em></p>
+	</li>
+</ul>
+<p><em>ϩⲓϫⲉⲛ</em></p>
+<p><em>on, upon</em></p>
+<p><em class="ar">على، فوق</em></p>
+<ul>
+	<li>
+		<p><em>ϩⲓϫⲉⲛ ⲡⲓ-ⲑ̀ⲣⲓⲣ</em></p>
+		<p>on the paten</p>
+		<p><em class="ar">فوق صينية الجسد</em></p>
+	</li>
+	<li>
+		<p><em>ϩⲓϫⲉⲛ ⲡⲓ-ⲧⲟⲧⲥ</em></p>
+		<p>on the chair (throne)</p>
+		<p><em class="ar">فوق الكرسى (العرش)</em></p>
+	</li>
+</ul>
 <div id="after">
   <h2 class="half">After:</h2>
   <p>[insert revised text here]</p>
