--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -918,9 +918,51 @@
 		<p><em class="ar">فوق الكرسى (العرش)</em></p>
 	</li>
 </ul>
+<p>How to form your first sentence in Coptic</p>
+<p><em class="ar">كيف تكوِن أول جملة لك فى اللغة القبطية</p>
+<p>From the previous two lessons, I am going to show you how to make a full sentence.</p>
+<p><em class="ar">من الدرسين السابقين، سأبين لك كيف تكوَّن جملة إسمية كاملة</p>
+<ol>
+	<li>
+		<p>Take a definite noun to start the sentence.</p>
+		<p><em class="ar">إختار إسما معرفا باداة تعريف لتبدا الجملة (المبتدأ)</em></p>
+		<p>Example:</p>
+		<p><em class="ar">مثال</em></p>
+		<p><em>ⲫ-ⲣⲱⲙⲓ</em></p>
+		<p>the man</p>
+		<p><em class="ar">الرجل</em></p>
+	</li>
+	<li>
+		<p>Choose an appropriate "prepositional phrase" or "local adverb" to complete the sentence.</p>
+		<p><em class="ar">إختار "حرف من حروف الجر، مع إسم مجرور" أو "ظرف مكان" مناسب للجملة لتكون الخبر</em></p>
+		<p>Example:</p>
+		<p><em class="ar">مثال</em></p>
+		<p><em>ϩⲓ ⲡ̀-ϫⲟⲓ</em></p>
+		<p> on the ship</p>
+		<p><em class="ar">على المركب (فوق المركب)</em></p>
+	</li>
+</ol>
+<p>Your sentence will look like this:</p>
+<p><em class="ar">الجملة المكونة ستكون هكنا</em></p>
+<p><em>ⲫ-ⲣⲱⲙⲓ ϩⲓ ⲡ̀-ϫⲟⲓ</em></p>
+<p>the man is on the ship</p>
+<p><em class="ar">الرجل (يكون) فوق السفينة</em></p>
+<p>Note: In sentences of this type, you will not find the English equivalent of is/are. These sentences can be called "sentences of adverbial predicates".</p>
+<p><em class="ar">لاحظ ان الجمل التى تحتوى على هنا التكوين، لا يوجد فيها فعل "الكينونة".</em></p>
+<p>Some other examples:</p>
+<p><em class="ar">أمثلة اخرى</em></p>
+<p><em>ϯ-ⲥ̀ϩⲓⲙⲓ ϧⲉⲛ ⲡ̀-ⲏⲓ</em></p>
+<p>The woman is in the house.</p>
+<p><em class="ar">المرأة (تكون) فى البيت</em></p>
+<p>In this sentence, let us use the plural of ship <em>ϫⲟⲓ</em> (ships <em>ⲉϫⲏⲟⲩ</em>)</p>
+<p><em class="ar">فى هذه الجملة: ستستعمل صيفة الجمع لكلمة "مركب أو سفينة أو قلرب" (<em>ϫⲟⲓ</em>) لتكون فى القبطية <em>ⲉϫⲏⲟⲩ</em> مراكب، سفن، قوارب.</em></p>
+<p><em>ⲛⲓ-ⲉϫⲏⲟⲩ ⲙ̀ⲙⲁⲩ</em></p>
+<p>The ships are there.</p>
+<p><em class="ar"></em>السفن (تكون) هناك</p>
+
 <div id="after">
-  <h2 class="half">After:</h2>
-  <p>[insert revised text here]</p>
+	<h2 class="half">After:</h2>
+	<p>[insert revised text here]</p>
 </div>
 	<!--<div>
   <h2>Chapter 7</h2>
